# xsthree

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
examples/: index.html  plane.html  xsthree.js
graphics/xsthree/: Cargo.toml
graphics/xsthree/src/runtime/: lib.js  worker.js
graphics/xsthree/src/runtime/core/: camera.js  geometry.js  index.js  material.js  mesh.js  mouse.js  renderable.js  renderer.js  scene.js  texture.js
graphics/xsthree/src/runtime/core/glsl/: shader.vs
graphics/xsthree/src/runtime/loader/: image.js
graphics/xsthree/src/runtime/math/: color.js  index.js  mat4.js  position.js  vec2.js  vec3.js  vec4.js
graphics/xsthree/src/runtime/math/wasmatrix/: mat4.js  vec2.js  vec3.js  vec4.js
graphics/xsthree/src/runtime/object/: cube.js  index.js  plane.js  tetrahedron.js  triangle.js
graphics/xsthree/src/runtime/util/: box.js  flatten.js  identity.js  index.js  is.js  lazy.js  left.js  pipe.js  right.js
graphics/xsthree/src/system/: lib.rs
public/: xsthree.js  xsthree.js.map
